--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,24 @@
 <html>
 <head>
-
+   <title> Input Here </title>
+   <script src = "https://code.jquery.com/jquery-1.12.3.min.js"></script>
+   <link href="/static/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <h1> Hello World </h1>
+  <h1>  Add New Addresses </h1>
+
+  <div id="todo-table">
+    <form>
+      <input type="text" name="item" placeholder="Add new address..." required />
+      <button type="submit">Add Item</button>
+
+      <ul>
+        <li>
+
+        </li>
+      </ul>
+    </form>
+  </div>
 </body>
-
-
 
 </html>
