--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
     <br>
     <br>
     <input id="total" type="hidden" name="total" value="1" />
-  	<button type="submit" href="/result">Coverge!</button>
+  	<button type="submit" href="/result">Converge!</button>
     </form>
   </div>
 </body>
@@ -50,10 +50,10 @@
 
 	        	$("#addresses").append(new_input);
 	        	$("#addresses").append(new_button);
-	        	
+
 	        	total += 1;
 	        	$("#total").val(total);
-        	} 
+        	}
 
         }
     });
