--- a/templates/result.html
+++ b/templates/result.html
@@ -19,7 +19,7 @@
     <div id="map"></div>
     <script>
 
-      
+
 
       $(function() {
 
@@ -41,7 +41,7 @@
 
           for (var i = 0; i < total; i++) {
               console.log(items[i]);
-              $.getJSON("https://maps.googleapis.com/maps/api/geocode/json?address=" 
+              $.getJSON("https://maps.googleapis.com/maps/api/geocode/json?address="
                 + encodeURIComponent(items[i])
                 + "&key=AIzaSyASFadX1MvoP2EccKogmGEyyza8UGcwHbU",
                 function(data) {
@@ -67,7 +67,7 @@
 
 
                       var location = new google.maps.LatLng(avg_lat, avg_long);
-                      var label = "This is a label. You're on the Google Maps team sure";
+                      var label = "Center";
                       var marker = new google.maps.Marker({
                         position: location,
                         label: label
