--- a/static/styles.css
+++ b/static/styles.css
@@ -70,3 +70,13 @@ h1{
 #addresses {
     margin-bottom: : 10px;
 }
+
+
+
+.button {
+    background-image: url('https://i.imgur.com/4wfJtlc.png');
+    background-size: cover;
+    width: 280px;
+    height: 44px;
+    margin: 0 auto;
+}
