It worksFLASK_APP=app.py flask runFLASK_APP=app.py flask run

--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,7 @@
     <br>
     <br>
     <br>
-    <input id="total_types" type="hidden" name="total" value="1" />
+    <input id="total_types" type="hidden" name="total_types" value="1" />
     <input id="total" type="hidden" name="total" value="1" />
     <form id="address_form" method="post" action="/result" >   
   	<button type="submit" href="/result">Coverge!</button>
