--- a/templates/main.html
+++ b/templates/main.html
@@ -3,6 +3,7 @@
    <title> Input Here </title>
    <script src = "https://code.jquery.com/jquery-1.12.3.min.js"></script>
    <link href="/static/styles.css" rel="stylesheet" type="text/css" />
+   <link rel="stylesheet" href="/resources.main.css"></head>link>
 </head>
 <body>
   <h1>  Add New Addresses </h1>
