--- a/templates/result.html
+++ b/templates/result.html
@@ -7,6 +7,7 @@
         width: 100%;
        }
     </style>
+    <link href="static/result.css" rel="stylesheet" type="text/css"  />
   </head>
   <script src = "https://code.jquery.com/jquery-1.12.3.min.js"></script>  <body>
   <body>
