--- a/templates/main.html
+++ b/templates/main.html
@@ -2,8 +2,7 @@
 <head>
    <title> Input Here </title>
    <script src = "https://code.jquery.com/jquery-1.12.3.min.js"></script>
-   <link href="/static/styles.css" rel="stylesheet" type="text/css" />
-   <link rel="stylesheet" href="/resources.main.css"></head>link>
+   <link href="static/styles.css" rel="stylesheet" type="text/css"  />
 </head>
 <body>
   <h1>  Add New Addresses </h1>
@@ -23,6 +22,8 @@
 	  	</div>
 	  	Closest to...
 	  	<br/>
+	  	<br/>
+        <br/>
     	<div id = "addresses">
 	      <input type="text" id="item_0" name="item_0" placeholder="Type address..." required />
 	      <button type="button" id="add_address">Add address</button>
