--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 <body>
   <h1>  Add New Addresses </h1>
 
-  <div id="todo-table">
+  <center><div id="todo-table">
     <form id="address_form" method="post" action="/result" >
     	Find...
     	<br/>
@@ -27,14 +27,20 @@
     	<div id = "addresses">
 	      <input type="text" id="item_0" name="item_0" placeholder="Type address..." required />
 	      <button type="button" id="add_address">Add address</button>
-	  	</div>
+	  	</div></center>
     <br>
     <br>
     <br>
     <input id="total_types" type="hidden" name="total_types" value="1" />
     <input id="total" type="hidden" name="total" value="1" />
     <form id="address_form" method="post" action="/result" >   
-  	<button type="submit" href="/result">Coverge!</button>
+    </br>
+	</br>
+	</br>
+	</br>
+	</br>
+	</br>
+  	<center><button type="submit" href="/result">Converge!</button></center>
     </form>
     </br>
     </br>
