--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 body{
     position: center;
     background-position: center;
-    background-image: url("https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjdtPfhnuzXAhVwct8KHQBDDJkQjRwIBw&url=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F600743%2Fhow-to-get-div-height-to-auto-adjust-to-background-size&psig=AOvVaw3saHFjQO80zrumLkHhi9TS&ust=1512335460233685");
+    background-image: "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjdtPfhnuzXAhVwct8KHQBDDJkQjRwIBw&url=https%3A%2F%2Fstackoverflow.com%2Fquestions%2F600743%2Fhow-to-get-div-height-to-auto-adjust-to-background-size&psig=AOvVaw3saHFjQO80zrumLkHhi9TS&ust=1512335460233685";
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0 auto;
@@ -13,7 +13,7 @@ h1 {
     display: inline;
     font-family: 'Ubuntu', sans-serif;
     font-weight: lighter;
-    font-style: italic; 
+    font-style: italic;
     color: #ccccff;
 }
 
@@ -93,4 +93,3 @@ h1{
     height: 44px;
     margin: 0 auto;
 }
-
