--- a/templates/result.html
+++ b/templates/result.html
@@ -7,6 +7,7 @@
         width: 100%;
        }
     </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"/>
     <link href="static/result.css" rel="stylesheet" type="text/css"  />
   </head>
   <script src = "https://code.jquery.com/jquery-1.12.3.min.js"></script>  <body>
